Fix syntax error in views.py and update mobile station UI with camera scan

--- a/templates/base.html
+++ b/templates/base.html
@@ -201,6 +201,10 @@
                             <span class="ts-icon is-calculator-icon"></span>
                             <span class="ts-text is-bold">廢棄物結算 (我們的)</span>
                         </a>
+                        <a class="item tab-item {% if '/dashboard/mobile/' in request.path %}is-active{% endif %}" href="/dashboard/mobile/">
+                            <span class="ts-icon is-mobile-screen-icon"></span>
+                            <span class="ts-text is-bold">行動工作站 (我們的)</span>
+                        </a>
                     </div>
                 {% endblock %}
             </div>
