更新廢棄物載運紀錄UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -197,13 +197,17 @@
                             <span class="ts-icon is-chart-line-icon"></span>
                             <span class="ts-text is-bold">廢棄物預測</span>
                         </a>
+                        <a class="item tab-item {% if '/dashboard/mobile/' in request.path %}is-active{% endif %}" href="/dashboard/mobile/">
+                            <span class="ts-icon is-mobile-screen-icon"></span>
+                            <span class="ts-text is-bold">行動工作站 (我們的)</span>
+                        </a>
                         <a class="item tab-item {% if '/dashboard/settlement/' in request.path %}is-active{% endif %}" href="/dashboard/settlement/">
                             <span class="ts-icon is-calculator-icon"></span>
                             <span class="ts-text is-bold">廢棄物結算 (我們的)</span>
                         </a>
-                        <a class="item tab-item {% if '/dashboard/mobile/' in request.path %}is-active{% endif %}" href="/dashboard/mobile/">
-                            <span class="ts-icon is-mobile-screen-icon"></span>
-                            <span class="ts-text is-bold">行動工作站 (我們的)</span>
+                        <a class="item tab-item {% if '/dashboard/transportation/' in request.path %}is-active{% endif %}" href="{% url 'dashboard:transportation_view' %}">
+                            <span class="ts-icon is-truck-icon"></span>
+                            <span class="ts-text is-bold">廢棄物載運紀錄 (我們的)</span>
                         </a>
                     </div>
                 {% endblock %}
