--- a/dashboard_extension/templates/dashboard_extension/mobile/station.html
+++ b/dashboard_extension/templates/dashboard_extension/mobile/station.html
@@ -248,7 +248,7 @@
         </div>
         
         <div style="margin-top: auto;">
-            <button class="btn-large btn-submit" id="btn-submit-record" onclick="submitRecord()">
+            <button class="btn-large btn-submit" id="btn-submit-record">
                 <span class="ts-icon is-cloud-arrow-up-icon"></span>
                 確認上傳 (Upload)
             </button>
